--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,18 +5,26 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "name": "Launch Chrome against localhost, with sourcemaps",
       "type": "chrome",
       "request": "launch",
-      "name": "Launch Program",
-      "url": "http://localhost:4200"
+      "url": "http://localhost:4200/",
+      "sourceMaps": true,
+      "webRoot": "${workspaceRoot}",
+      "sourceMapPathOverrides": {
+        "webpack:///c:/Users/Sean/Documents/Projects/trip-calculator/*": "${workspaceRoot}/*"
+      }
     },
     {
-      "type": "node",
+      "name": "Attach to Chrome, with sourcemaps",
+      "type": "chrome",
       "request": "attach",
-      "name": "Attach to Process",
-      "address": "localhost",
-      "port": 4200,
-      "outFiles": []
+      "port": 9222,
+      "sourceMaps": true,
+      "webRoot": "${workspaceRoot}/src/app",
+      "sourceMapPathOverrides": {
+        "webpack:///*": "/*"
+      }
     }
   ]
 }
