--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,29 +2,30 @@
   // Use IntelliSense to learn about possible Node.js debug attributes.
   // Hover to view descriptions of existing attributes.
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Chrome against localhost, with sourcemaps",
+      "name": "ng serve",
       "type": "chrome",
       "request": "launch",
-      "url": "http://localhost:4200/",
-      "sourceMaps": true,
-      "webRoot": "${workspaceRoot}",
-      "sourceMapPathOverrides": {
-        "webpack:///c:/Users/Sean/Documents/Projects/trip-calculator/*": "${workspaceRoot}/*"
-      }
+      "url": "http://localhost:4200/#",
+      "webRoot": "${workspaceRoot}"
     },
     {
-      "name": "Attach to Chrome, with sourcemaps",
+      "name": "ng test",
       "type": "chrome",
-      "request": "attach",
-      "port": 9222,
-      "sourceMaps": true,
-      "webRoot": "${workspaceRoot}/src/app",
-      "sourceMapPathOverrides": {
-        "webpack:///*": "/*"
-      }
-    }
+      "request": "launch",
+      "url": "http://localhost:9876/debug.html",
+      "webRoot": "${workspaceRoot}"
+    },
+    {
+      "name": "ng e2e",
+      "type": "node",
+      "request": "launch",
+      "program": "${workspaceRoot}/node_modules/protractor/bin/protractor",
+      "protocol": "inspector",
+      "args": ["${workspaceRoot}/protractor.conf.js"]
+    }      
   ]
 }
