--- a/package.json
+++ b/package.json
@@ -14,18 +14,20 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.2.6",
+    "@angular/cdk": "^5.2.3",
     "@angular/common": "^5.2.6",
     "@angular/compiler": "^5.2.6",
     "@angular/core": "^5.2.6",
     "@angular/forms": "^5.2.6",
     "@angular/http": "^5.2.6",
+    "@angular/material": "^5.2.3",
     "@angular/platform-browser": "^5.2.6",
     "@angular/platform-browser-dynamic": "^5.2.6",
     "@angular/platform-server": "^5.2.6",
     "@angular/router": "^5.2.6",
     "core-js": "^2.5.1",
     "express": "^4.15.4",
-    "protractor": "^5.1.2",
+    "hammerjs": "^2.0.8",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.4"
   },
