--- a/package.json
+++ b/package.json
@@ -20,11 +20,12 @@
     "@angular/core": "^5.2.6",
     "@angular/forms": "^5.2.6",
     "@angular/http": "^5.2.6",
-    "@angular/material": "^5.2.3",
     "@angular/platform-browser": "^5.2.6",
     "@angular/platform-browser-dynamic": "^5.2.6",
     "@angular/platform-server": "^5.2.6",
     "@angular/router": "^5.2.6",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.1",
+    "bootstrap": "^4.0.0",
     "core-js": "^2.5.1",
     "express": "^4.15.4",
     "hammerjs": "^2.0.8",
