--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "core-js": "^2.5.1",
     "express": "^4.15.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.21.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.4"
   },
