--- a/package.json
+++ b/package.json
@@ -8,35 +8,34 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e",
-    "postinstall": "ng build --aot --target=production"
+    "e2e": "ng e2e"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.6",
-    "@angular/cdk": "^5.2.3",
-    "@angular/common": "^5.2.6",
-    "@angular/compiler": "^5.2.6",
-    "@angular/core": "^5.2.6",
-    "@angular/forms": "^5.2.6",
-    "@angular/http": "^5.2.6",
-    "@angular/platform-browser": "^5.2.6",
-    "@angular/platform-browser-dynamic": "^5.2.6",
-    "@angular/platform-server": "^5.2.6",
-    "@angular/router": "^5.2.6",
-    "@ng-bootstrap/ng-bootstrap": "^1.0.1",
+    "@angular/animations": "^6.0.3",
+    "@angular/common": "^6.0.3",
+    "@angular/compiler": "^6.0.3",
+    "@angular/core": "^6.0.3",
+    "@angular/forms": "^6.0.3",
+    "@angular/http": "^6.0.3",
+    "@angular/platform-browser": "^6.0.3",
+    "@angular/platform-browser-dynamic": "^6.0.3",
+    "@angular/platform-server": "^6.0.3",
+    "@angular/router": "^6.0.3",
+    "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.1",
     "express": "^4.15.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.21.0",
-    "rxjs": "^5.5.2",
-    "zone.js": "^0.8.4"
+    "rxjs": "^6.2.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.1",
-    "@angular/compiler-cli": "^5.2.6",
-    "@angular/language-service": "^5.2.6",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "^6.0.3",
+    "@angular/compiler-cli": "^6.0.3",
+    "@angular/language-service": "^6.0.3",
     "@types/jasmine": "~2.8.3",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "^9.4.6",
@@ -52,7 +51,7 @@
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
     "tslint": "~5.9.1",
-    "typescript": "~2.5.3"
+    "typescript": "~2.7.2"
   },
   "engines": {
     "node": "6.10.1",
