--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "trip-calculator",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "license": "MIT",
   "scripts": {
     "ng": "ng",
@@ -8,7 +8,8 @@
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot --prod"
   },
   "private": true,
   "dependencies": {
@@ -25,7 +26,6 @@
     "@ng-bootstrap/ng-bootstrap": "^2.0.0",
     "bootstrap": "^4.0.0",
     "core-js": "^2.5.1",
-    "express": "^4.15.4",
     "hammerjs": "^2.0.8",
     "moment": "^2.21.0",
     "rxjs": "^6.2.0",
@@ -54,7 +54,7 @@
     "typescript": "~2.7.2"
   },
   "engines": {
-    "node": "6.10.1",
-    "npm": "3.10.10"
+    "node": "8.11.1",
+    "npm": "6.1.0"
   }
 }
